--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "poke",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://perdomov.github.io/pokefinder/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -17,6 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
